--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@material-tailwind/react": "2.1.2",
     "next": "13.4.0",
     "react": "18",
-    "react-dom": "18"
+    "react-dom": "18",
+    "react-motion": "^0.5.2"
   },
   "devDependencies": {
     "@types/node": "20",
