--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.2",
     "framer-motion": "^11.5.4",
-    "next": "13.4.0",
+    "next": "^15.0.3",
     "react": "18",
     "react-dom": "18",
     "react-motion": "^0.5.2"
