--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.2",
     "framer-motion": "^11.5.4",
+    "lucide-react": "^0.474.0",
     "next": "^15.0.3",
-    "react": "18",
-    "react-dom": "18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-motion": "^0.5.2"
   },
   "devDependencies": {
